Modify access rules

--- a/project.config
+++ b/project.config
@@ -2,6 +2,7 @@
 	inheritFrom = All-Projects
 [access "refs/*"]
 	owner = group rhosqeauto-core
+	owner = group user/Ariel Opincaru (aopincar)
 	owner = group user/Avi Talmor (atalmor)
 	owner = group user/Queria Sa-Tas (queria)
 	owner = group user/Vadim Griner (vgri)
@@ -11,6 +12,7 @@
 	push = deny group Registered Users
 	pushMerge = deny group Registered Users
 [access "refs/for/refs/*"]
+	read = group user/Ariel Opincaru (aopincar)
 	read = group user/Avi Talmor (atalmor)
 	read = group user/Avishay Mahluf (avishaymahluf)
 	read = group user/Vadim Griner (vgri)
@@ -19,12 +21,15 @@
 	push = group rhosqeauto-contrib
 	push = group rhosqeauto-core
 	push = group rhosqeauto-stable
+	push = group user/Ariel Opincaru (aopincar)
 	push = group user/Avi Talmor (atalmor)
 	push = group user/Avishay Mahluf (avishaymahluf)
 	push = group user/Vadim Griner (vgri)
+	label-Code-Review = -2..+2 group user/Ariel Opincaru (aopincar)
 	label-Code-Review = -2..+2 group user/Avi Talmor (atalmor)
 	label-Code-Review = -2..+2 group user/Avishay Mahluf (avishaymahluf)
 	label-Code-Review = -2..+2 group user/Vadim Griner (vgri)
+	label-Verified = -1..+1 group user/Ariel Opincaru (aopincar)
 	label-Verified = -1..+1 group user/Avi Talmor (atalmor)
 	label-Verified = -1..+1 group user/Avishay Mahluf (avishaymahluf)
 	label-Verified = -1..+1 group user/Vadim Griner (vgri)
@@ -32,6 +37,7 @@
 	rebase = group rhosqeauto-contrib
 	rebase = group rhosqeauto-core
 	rebase = group rhosqeauto-stable
+	rebase = group user/Ariel Opincaru (aopincar)
 [access "refs/heads/*"]
 	read = group rhosqeauto-stable
 	create = group rhosqeauto-stable
