Fix error when localhost doesn't contain /usr/libexec/platform-python.
The lately added play inside tripleo-undercloud plugin can cause an issue if
the host from where infrared is triggered doesn't contain the binary
/usr/libexec/platform-python, as it's the case of Fedora, for example.

This occurs because the play sets the ansible_python_interpreter to that binary
(which exists in all RHEL distributions) but the inventory-update has a delegate_to
localhost, which could be your own machine. The solution is to specify in the
include_role arguments that we want to keep the value for ansible_python_interpreter
from the inventory.

Change-Id: I4b0ef5280b973e6553fe0bf76c684731576c9306

--- a/plugins/tripleo-undercloud/update_inventory.yml
+++ b/plugins/tripleo-undercloud/update_inventory.yml
@@ -12,6 +12,8 @@
         name: inventory-update
         apply:
           delegate_to: localhost
+          vars:
+            ansible_python_interpreter: "{{ hostvars['localhost']['ansible_python_interpreter']|default('python') }}"
       vars:
         inventory_file_name: 'hosts-upgrade'
 
