Fix overcloud fencing resource agents failures
This will allow traffic from 10.0.0.0/24 to the hypervisor
and resolve controlers not being able to fence each other
This is crucial for overcloud resources HA

Change-Id: If94346dc1a76517e049422ca45aecfc53e674146

--- a/infrared/common/roles/vbmc/tasks/configure.yml
+++ b/infrared/common/roles/vbmc/tasks/configure.yml
@@ -40,6 +40,10 @@
     set_fact:
         vbmc_management_address: "{{ (vbmc_host == 'hypervisor')|ternary(hostvars['hypervisor'][management_net].ipv4.address, ansible_default_ipv4.address) }}"
 
+  - name: Set external network bmc address
+    set_fact:
+        vbmc_external_net_address: "{{ ansible_external.ipv4.network }}/{{ ansible_external.ipv4.netmask }}"
+
   - include_tasks: iptables.yml
 
   - name: Add nodes to vbmc
