fix dstat infrared role for OSP<15
on different RHEL versions dstat comes with different set of features;
we'll first try to start it with 'top' params, if it fails then start
it without them

RHOSINFRA-2560

Change-Id: I809961d2f20578f9242fe828449d3db29a8684c8

--- a/plugins/tripleo-undercloud/setup_packages.yml
+++ b/plugins/tripleo-undercloud/setup_packages.yml
@@ -106,6 +106,9 @@
       - name: Setup and start dstat
         import_role:
           name: dstat
+        vars:
+          dstat_output_dir: '/var/log/extra'
+        tags: dstat
 
       - name: install packages on Undercloud
         package:
