--- a/infrared/common/roles/dstat/tasks/main.yml
+++ b/infrared/common/roles/dstat/tasks/main.yml
@@ -1,22 +1,24 @@
 ---
-- name: install dstat package
+- name: install dstat packages
   package:
-      name: dstat
+      name:
+        - dstat
+        - pcp-system-tools
       state: present
 
 - name: deploy dstat.service
-  copy:
-      src: dstat.service
+  template:
+      src: dstat.service.j2
       dest: /etc/systemd/system/dstat.service
   register: dstat_service_file
 
 - name: reload systemd to pickup dstat.service
   systemd:
     daemon-reload: yes
-  when: dstat_service_file | changed
+  when: dstat_service_file is changed
 
 - name: ensure dstat.service is up
   service:
     name: dstat
-    enabled: yes
-    state: started
+    enabled: true
+    state: restarted
