--- a/plugins/tripleo-overcloud/tasks/environment_templates.yml
+++ b/plugins/tripleo-overcloud/tasks/environment_templates.yml
@@ -14,8 +14,8 @@
 - name: include templates from default location
   lineinfile:
       dest: "~/overcloud_deploy.sh"
-      line: "--environment-file {{ item.item }} \\"
-      insertbefore: "^--log-file.*"
+      line: '  --environment-file {{ item.item }} \'
+      insertafter: '^\s*--templates.*'
   with_items: "{{ default_templates.results }}"
   when: item.matched > 0
 
