virsh: support multi hypervisor
Performance team wants to use infrared to create vms on multiple
hypervisors and then install OSP on these vms to test scale issues.
In this change we enhance virsh plugin to deploy vms on multiple
hypervisors.

1) Updated virsh plugin CLI option ‘host-address’ to accept multiple
hypervisors addresses. User can pass addresses like
    Infrared virsh --host-address 10.16.154.141,10.16.154.144
      (or)
    Infrared virsh --host-address 10.16.154.141 --host-address 10.16.154.144
Note: All hypervisors share same host parameters i.e user and ssh keys
should be same on all hypervisors. User can pass single host (in
traditional way) to deploy on single hypervisor i.e
    Infrared virsh --host-address 10.16.154.141

2) When we add hypervisors to inventory, we add them as hypervisor-0,
hypervisor-1, etc. If we have only single hypervisor, we add
‘hypervisor’ to inventory (old approach), so that any projects using
virsh plugin to deploy vms on single hypervisor won’t see any difference.

3) Created new network '4_nets_multi_hypervisor.yml' file. Each
hypervisor will have 4 networks. 3 networks are connected through
external switch to enable communication between vms acros hypervisors.
ine NAT network (“management”) to enable external connectivity for VM,
for installing and configuring the software.

4) Scheduling: All the vms should be scheduled on multiple hypervisors.
We use simple Round Robin scheduler. Each hypervisor calculates node
indexes (when constructing topology_node dict) for the nodes it will be
hosting. Hypervisor hosts every (hypervisor_count)th vm. For example,
when we have 3 hypervisors, the following command

infrared virsh --host-adress  10.16.154.141,10.16.154.144, 10.16.154.145
    --topology-nodes:undercloud:1,controller-3,compute:5
will distribute vms across them like
hypervisor-0 : undercloud-0, controller-0, compute-0, compute-3,
hypervisor-1 : controller-1, compute-1, compute-4,
hypervisor-2 : controller-2, compute-2

--- a/plugins/virsh/provision_vms.yml
+++ b/plugins/virsh/provision_vms.yml
@@ -41,6 +41,7 @@
       with_dict: "{{ topology_nodes }}"
       loop_control:
           loop_var: node
+      when: node.value.node_indexes|length > 0
       tags: images
 
     - name: prepare bridge interfaces in the topology
@@ -54,6 +55,7 @@
           with_dict: "{{ topology_nodes }}"
           loop_control:
               loop_var: node
+          when: node.value.node_indexes|length > 0
 
         - name: Wait for all disks to be created
           async_status:
@@ -62,6 +64,7 @@
           until: disk_tasks.finished
           retries: 300
           with_items: "{{ async_disks }}"
+          when: async_disks is defined
       tags: disks
 
     # Build VMs
@@ -71,6 +74,7 @@
           with_dict: "{{ topology_nodes }}"
           loop_control:
               loop_var: node
+          when: node.value.node_indexes|length > 0
 
         - name: Wait for VMs to be created
           async_status:
@@ -79,6 +83,7 @@
           until: install_tasks.finished
           retries: 300
           with_items: "{{ async_install }}"
+          when: async_install is defined
       tags: install
 
     # Fetch IP addresses
@@ -88,10 +93,19 @@
           with_dict: "{{ topology_nodes }}"
           loop_control:
               loop_var: node
+          when: node.value.node_indexes|length > 0
 
+        # add_host inside tasks/netip_natted.yml, bypasses the play host loop 
+        # and only runs once for all the hosts in the play. To force add_host
+        # to run on all hypervisors, we use this list to run tasks sequentially 
+        # on hosts i.e move to next after fininshing the previous host
         - name: Set ip VMs ip addresses and add to inventory
           include_tasks: tasks/netip_natted.yml
-          when: "not topology_node.external_network.bridged|default(False)"
+          with_list:
+            - "{{ inventory_hostname }}"
+          loop_control:
+              loop_var: addhost
+          when: "(vm_inv_info is defined) and (not topology_node.external_network.bridged|default(False))"
       tags: ips
 
     - name: Post-configure VMs
@@ -99,11 +113,4 @@
       with_dict: "{{ topology_nodes }}"
       loop_control:
           loop_var: node
-
-    # TODO(obaranov) This is deprecated config. Remove it.
-    - name: update tunneling conf
-      template:
-          src: ansible.ssh.config.j2
-          dest: "{{ inventory_dir }}/ansible.ssh.config"
-      delegate_to: localhost
-      tags: ssh_tunnel
+      when: node.value.node_indexes|length > 0
