--- a/plugins/virsh/cleanup.yml
+++ b/plugins/virsh/cleanup.yml
@@ -9,11 +9,12 @@
   tasks:
     - name: add hosts to host list
       add_host:
-          name: "{{ hypervisor.name | default(hypervisor_name) }}"
+          name: "{{ hypervisor_name + (hypervisor.address|length == 1) | ternary('', '-' + item.0|string) }}"
           groups: "{{ hypervisor.groups|default([hypervisor_name]) | join(',') }}"
           ansible_user: "{{ hypervisor.user }}"
-          ansible_host: "{{ hypervisor.address }}"
+          ansible_host: "{{ item.1 }}"
           ansible_ssh_private_key_file: "{{ hypervisor.key }}"
+      with_indexed_items: "{{ hypervisor.address }}"
 
 - name: Remove all VMs and networks that were created
   hosts: hypervisor
