--- a/plugins/virsh/tasks/create_bridges.yml
+++ b/plugins/virsh/tasks/create_bridges.yml
@@ -2,7 +2,7 @@
 - name: create bridge
   command: "brctl addbr {{ item.network | format(num) if item.needs_formatting | default(False)  else item.network }}"
   ignore_errors: true
-  with_sequence: start={{ node_start_index|int }} end={{ topology_node.num|int + node_start_index|int - 1 }}
+  with_items: "{{ topology_node.node_indexes }}"
   loop_control:
     loop_var: num
 
@@ -10,12 +10,12 @@
   command: "brctl setageing {{ item.network | format(num) if item.needs_formatting | default(False) else item.network }} 0"
   when:
     - item.hub|default(False)
-  with_sequence: start={{ node_start_index|int }} end={{ topology_node.num|int + node_start_index|int - 1 }}
+  with_items: "{{ topology_node.node_indexes }}"
   loop_control:
     loop_var: num
 
 - name: bring bridges up
   command: "ip link set {{ item.network | format(num) if item.needs_formatting | default(False) else item.network }} up"
-  with_sequence: start={{ node_start_index|int }} end={{ topology_node.num|int + node_start_index|int - 1 }}
+  with_items: "{{ topology_node.node_indexes }}"
   loop_control:
     loop_var: num
