--- a/plugins/virsh/tasks/vms_1_create_disk.yml
+++ b/plugins/virsh/tasks/vms_1_create_disk.yml
@@ -6,16 +6,6 @@
   set_fact:
       disk_pool: "{{ provision.disk.pool if (topology_node.disks.disk1.path == None) else topology_node.disks.disk1.path }}"
 
-- name: Set default node_start_index
-  set_fact:
-      node_start_index: 0
-
-- name: Calculate node_start_index
-  set_fact:
-      node_start_index: "{{ node_start_index|int + 1 if (topology_node.name + '-' in item) and hostvars[item].get('ansible_connection') == 'ssh' else node_start_index|int }}"
-  with_items: "{{ groups.all }}"
-  when: provision.topology.extend | default(False)
-
 - block:
       #todo(yfried): move this to verification section (before execution)
       - name: verify swap is within disk1 size
@@ -42,14 +32,13 @@
       # For disks usually it will be only 1 disk so the async will run on nodes rather than disks creation
       - name: create disk(s) from vm base image
         vars:
-            amount: "{{ topology_node.num|int + node_start_index|int }}"
             net_scripts: /etc/sysconfig/network-scripts
         shell: |
             set -ex
             export LIBGUESTFS_PATH=/opt/appliance
             export LIBGUESTFS_BACKEND=direct
 
-            {% for num in range(node_start_index|int, amount|int, 1) %}
+            {% for num in topology_node.node_indexes %}
             {% for disk_name, disk_values in topology_node.disks.items() %}
             {% set node_image = '{0}-{1}-{2}.qcow2'.format(topology_node.name, num, disk_name) %}
             {% set image_name = (disk_values.import_url|default('') or topology_node.import_url|default('') or url) | basename %}
@@ -90,7 +79,7 @@
             {% endif %}{# endif not import_url #}
             chown qemu:qemu {{ disk_pool }}/{{ node_image }}
             {% endfor %}{# endfor vm disks #}
-            {% endfor %}{# endfor vm-type(controller etc).amount #}
+            {% endfor %}{# endfor vm-type(controller etc) #}
       #  todo(yfried) needs a "creates"
       #  args:
       #      creates: "create disk(s) from vm base image"
