virsh: support multi hypervisor
Performance team wants to use infrared to create vms on multiple
hypervisors and then install OSP on these vms to test scale issues.
In this change we enhance virsh plugin to deploy vms on multiple
hypervisors.

1) Updated virsh plugin CLI option ‘host-address’ to accept multiple
hypervisors addresses. User can pass addresses like
    Infrared virsh --host-address 10.16.154.141,10.16.154.144
      (or)
    Infrared virsh --host-address 10.16.154.141 --host-address 10.16.154.144
Note: All hypervisors share same host parameters i.e user and ssh keys
should be same on all hypervisors. User can pass single host (in
traditional way) to deploy on single hypervisor i.e
    Infrared virsh --host-address 10.16.154.141

2) When we add hypervisors to inventory, we add them as hypervisor-0,
hypervisor-1, etc. If we have only single hypervisor, we add
‘hypervisor’ to inventory (old approach), so that any projects using
virsh plugin to deploy vms on single hypervisor won’t see any difference.

3) Created new network '4_nets_multi_hypervisor.yml' file. Each
hypervisor will have 4 networks. 3 networks are connected through
external switch to enable communication between vms acros hypervisors.
ine NAT network (“management”) to enable external connectivity for VM,
for installing and configuring the software.

4) Scheduling: All the vms should be scheduled on multiple hypervisors.
We use simple Round Robin scheduler. Each hypervisor calculates node
indexes (when constructing topology_node dict) for the nodes it will be
hosting. Hypervisor hosts every (hypervisor_count)th vm. For example,
when we have 3 hypervisors, the following command

infrared virsh --host-adress  10.16.154.141,10.16.154.144, 10.16.154.145
    --topology-nodes:undercloud:1,controller-3,compute:5
will distribute vms across them like
hypervisor-0 : undercloud-0, controller-0, compute-0, compute-3,
hypervisor-1 : controller-1, compute-1, compute-4,
hypervisor-2 : controller-2, compute-2

--- a/plugins/virsh/provision_networks.yml
+++ b/plugins/virsh/provision_networks.yml
@@ -78,6 +78,10 @@
           command: "list_nets"
       register: network_list
 
+    - name: set current hypervisor index
+      set_fact:
+          current_hypervisor: "{{ groups['hypervisor'].index(inventory_hostname) }}"
+
     - name: create the networks for the topology
       virt_net:
           command: "define"
