tripleo-undercloud: multi hypervisor support
This plugin assumes 'hypervisor' as undercloud's hosting hypervisor name
in inventory file for ansible tasks. Instead we use
groups.hypervisor|first to get this hypervisor.

GH-360
Change-Id: I0d924159467b30cddaea6b89e444eb4f90471fdb

Change-Id: Iac43249ba848671bb3a1ec3f3cf032ac2121b597

--- a/plugins/tripleo-undercloud/tasks/update_and_reboot.yml
+++ b/plugins/tripleo-undercloud/tasks/update_and_reboot.yml
@@ -32,7 +32,7 @@
   retries: 100
   delay: 3
   ignore_errors: true
-  delegate_to: hypervisor
+  delegate_to: "{{ groups.hypervisor|first }}"
   when:
     - update is changed
     - "'hypervisor' in groups"
@@ -61,7 +61,7 @@
       search_regex: OpenSSH
       delay: 10
       sleep: 3
-  delegate_to: hypervisor
+  delegate_to: "{{ groups.hypervisor|first }}"
   when: "'hypervisor' in groups"
   retries: 6
   delay: 30
