vbmc: multi hypervisor support
1) When a vm is added to inventory, it's jump host(hypervisor) will be
added (to 'ProxyCommand') in 'ansible_ssh_common_args'. We use this
hypervisor ip to access the vm instead of hardcoding hypervisor to
‘hypervisor’.

2) Create vbmc ports for all the vms (hosted on hypervisors) on the
first hypervisor, but will use --libvirt-uri to ssh to the correct
hypervisor when issuing libvirt command for the vms hosted on the other
hypervisors.
Later We may need to enhance it, to create vbmc port directly on the
hypervisor which is hosting the vm rather than creating all vbmc ports
on first hypervisor.

GH-360
Change-Id: Ib89b378e013fe9938142feedebaa06feb12094d0

Change-Id: Iac0ffb76889edb245efb8399c4252e4246647782

--- a/infrared/common/roles/vbmc/tasks/cleanup.yml
+++ b/infrared/common/roles/vbmc/tasks/cleanup.yml
@@ -72,6 +72,7 @@
     file:
         path: "{{ vbmc_virtualenv }}"
         state: absent
+    ignore_errors: true
 
   - name: Delete scripts and configuration files
     file:
