--- a/project.config
+++ b/project.config
@@ -5,7 +5,7 @@
 	owner = group user/Ariel Opincaru (aopincar)
 	owner = group user/Avi Talmor (atalmor)
 	owner = group user/Queria Sa-Tas (queria)
-	owner = group user/Vadim Griner (vgri)
+	owner = group user/Vadim G (vgri)
 	owner = group user/rhosqeauto (rhosqeauto)
 	read = group Anonymous Users
 	read = group rhosqeauto-contrib
@@ -15,7 +15,7 @@
 	read = group user/Ariel Opincaru (aopincar)
 	read = group user/Avi Talmor (atalmor)
 	read = group user/Avishay Mahluf (avishaymahluf)
-	read = group user/Vadim Griner (vgri)
+	read = group user/Vadim G (vgri)
 	push = deny group Registered Users
 	push = group github/redhat-openstack
 	push = group rhosqeauto-contrib
@@ -24,15 +24,15 @@
 	push = group user/Ariel Opincaru (aopincar)
 	push = group user/Avi Talmor (atalmor)
 	push = group user/Avishay Mahluf (avishaymahluf)
-	push = group user/Vadim Griner (vgri)
+	push = group user/Vadim G (vgri)
 	label-Code-Review = -2..+2 group user/Ariel Opincaru (aopincar)
 	label-Code-Review = -2..+2 group user/Avi Talmor (atalmor)
 	label-Code-Review = -2..+2 group user/Avishay Mahluf (avishaymahluf)
-	label-Code-Review = -2..+2 group user/Vadim Griner (vgri)
+	label-Code-Review = -2..+2 group user/Vadim G (vgri)
 	label-Verified = -1..+1 group user/Ariel Opincaru (aopincar)
 	label-Verified = -1..+1 group user/Avi Talmor (atalmor)
 	label-Verified = -1..+1 group user/Avishay Mahluf (avishaymahluf)
-	label-Verified = -1..+1 group user/Vadim Griner (vgri)
+	label-Verified = -1..+1 group user/Vadim G (vgri)
 	rebase = group github/redhat-openstack
 	rebase = group rhosqeauto-contrib
 	rebase = group rhosqeauto-core
