WIP - Use state latest for tempest plugin from git
Change-Id: Ieee4ea356ceb3f50cfc4fcfe5b705791acda57c8

--- a/plugins/tempest/tasks/setup/git/install_plugins.yml
+++ b/plugins/tempest/tasks/setup/git/install_plugins.yml
@@ -57,6 +57,6 @@
   pip:
       virtualenv: "{{ virtualenvs.tempest }}"
       name: "{{ plugins_dir }}/{{ item }}"
-      state: present
+      state: latest
       editable: true
   with_items: "{{ plugins.keys() }}"
