--- a/plugins/tempest/vars/tests/kuryr.yml
+++ b/plugins/tempest/vars/tests/kuryr.yml
@@ -1,7 +1,8 @@
 ---
 test_dict:
   test_regex: 'kuryr'
-  whitelist: []
+  whitelist:
+      - test_namespace_sg_svc_isolation
   blacklist: []
   plugins:
     kuryr:
