Fix tempest failure ansible_python_interpreter is undefined
in bm installation we got this failure.
changing the task "set python interpreter" to run for all setup methods
solved it

RHOSINFRA-2591

Change-Id: I7bb3e21c845e4703033644c3f3b4ad5f2980ffed

--- a/plugins/tempest/tasks/run_suite.yml
+++ b/plugins/tempest/tasks/run_suite.yml
@@ -114,12 +114,11 @@
   when: test_dict.test_regex is defined and test_dict.test_regex
 
 - block:
-      - name: Set python interpreter for git tempest
+      - name: Set python interpreter for tempest
         vars:
           test_openstack_version: "{{ test.openstack.version | default(overcloud_version) | openstack_release }}"
         set_fact:
           python_interpreter: "{{ (test_openstack_version | int > 14) | ternary('python3', 'python') }}"
-        when: test.setup == 'git'
 
       - name: run tempest "{{ test_suite }}" suite
         shell: >
@@ -134,7 +133,7 @@
             {{ (test.list) | ternary ('--list','') }}
             > {{ test_output_filename }}.subunit;
         environment:
-            PYTHON: "{{ python_interpreter | default(ansible_python_interpreter) or 'python' }}"
+            PYTHON: "{{ python_interpreter | default(python_interpreter) or 'python' }}"
         args:
             executable: /bin/bash
             chdir: "{{ test.dir }}"
