Don't wait for ovs agent when ml2/ovn is used
Since this agent is not running in OVN deployments.

Change-Id: I1890155477c204f418a1477bd7e4435a468461e5

--- a/plugins/tripleo-overcloud/overcloud_reboot.yml
+++ b/plugins/tripleo-overcloud/overcloud_reboot.yml
@@ -423,7 +423,9 @@
                 until: nova_ovs_up.stdout.find(':-)') > -1
                 retries: 60
                 delay: 5
-                when: overcloud_version|int < 15
+                when:
+                  - overcloud_version|int < 15
+                  - not install.network.ovn
 
               - name: Waiting for ovn-controller agent on compute node to come up
                 shell: |
