--- a/plugins/tripleo-overcloud/overcloud_reboot.yml
+++ b/plugins/tripleo-overcloud/overcloud_reboot.yml
@@ -419,11 +419,14 @@
                 shell: |
                     source {{ overcloud_rc }}
                     openstack network agent list --host {{ compute_fqdn.stdout }} -f json | jq -r -c '.[] | select(.Binary | contains("neutron-openvswitch-agent")) | .Alive'
+                when: not install.network.ovn
                 register: nova_ovs_up
                 until: nova_ovs_up.stdout.find(':-)') > -1
                 retries: 60
                 delay: 5
-                when: overcloud_version|int < 15
+                when:
+                  - overcloud_version|int < 15
+                  - not install.network.ovn
 
               - name: Waiting for ovn-controller agent on compute node to come up
                 shell: |
