--- a/plugins/tripleo-overcloud/overcloud_reboot.yml
+++ b/plugins/tripleo-overcloud/overcloud_reboot.yml
@@ -419,6 +419,8 @@
                 shell: |
                     source {{ overcloud_rc }}
                     openstack network agent list --host {{ compute_fqdn.stdout }} -f json | jq -r -c '.[] | select(.Binary | contains("neutron-openvswitch-agent")) | .Alive'
+                when: not install.network.ovn
+
                 register: nova_ovs_up
                 until: nova_ovs_up.stdout.find(':-)') > -1
                 retries: 60
