--- a/plugins/packstack/init.yml
+++ b/plugins/packstack/init.yml
@@ -13,9 +13,13 @@
         setup:
 
       - name: Ensure hostname is in /etc/hosts
+        vars:
+            has_search: "{{ 'search' in hostvars[item].ansible_dns }}"
+            hname:  "{{ hostvars[item].inventory_hostname }}"
+            long_name: "{% if has_search %}{{ hname }}.{{ hostvars[item].ansible_dns.search[0] }}{% endif %}"
         lineinfile:
             dest: /etc/hosts
-            line: "{{ hostvars[item].ansible_default_ipv4.address }} {{ hostvars[item].inventory_hostname }}.{{ hostvars[item].ansible_dns.search[0] }} {{ hostvars[item].inventory_hostname }}"
+            line: "{{ hostvars[item].ansible_default_ipv4.address }}  {{ long_name }} {{ hname }}"
             state: present
         with_items: "{{ groups['openstack_nodes'] }}"
         when: hostvars[inventory_hostname].ansible_default_ipv4.address is defined
