Add support for ironic config on OSP15
The patch differentiates between docker and podman executables when
handling container restarts.

As of OSP15, the default network backend is OVN. We need to define the
mech_driver accordingly in the overcloud.

Change-Id: I92c7076b02fa709229e3a896533789931fcc45c9

--- a/plugins/tripleo-overcloud/vars/overcloud/templates/networking-ansible.yml
+++ b/plugins/tripleo-overcloud/vars/overcloud/templates/networking-ansible.yml
@@ -14,3 +14,6 @@ custom_templates:
     NeutronNetworkVLANRanges: 'baremetal:1000:1010'
     IronicProvisioningNetwork: 'baremetal'
     IronicRescuingNetwork: 'baremetal'
+    {% if (install.version | default(overcloud_version) | openstack_release >= 15) %}
+    NeutronMechanismDrivers: ovn,ansible
+    {% endif %}
