Add support for ironic config on OSP15
The patch differentiates between docker and podman executables when
handling container restarts.

As of OSP15, the default network backend is OVN. We need to define the
mech_driver accordingly in the overcloud.

Change-Id: I92c7076b02fa709229e3a896533789931fcc45c9

--- a/plugins/tripleo-undercloud/post.yml
+++ b/plugins/tripleo-undercloud/post.yml
@@ -14,6 +14,9 @@
 
     - name: increase iscsi verify attempts in ironic conductor
       block:
+        - name: set containers binary
+          set_fact:
+            containers_bin: "{{ (install.version|default(undercloud_version)|openstack_release < 15) | ternary('docker', 'podman') }}"
         - name: set the iscsi verify attempt count in container
           lineinfile:
             path: /var/lib/config-data/puppet-generated/ironic/etc/ironic/ironic.conf
@@ -33,6 +36,6 @@
         - "install.version is defined"
   handlers:
     - name: restart ironic conductor container
-      command: docker restart ironic_conductor
+      command: "{{ containers_bin }} restart ironic_conductor"
     - name: restart ironic conductor service
       command: systemctl restart openstack-ironic-conductor.service
