Use podman in undercloud in OSP15
The patch differentiates between docker and podman executables when
handling container restarts.

Change-Id: I92c7076b02fa709229e3a896533789931fcc45c9

--- a/plugins/tripleo-undercloud/post.yml
+++ b/plugins/tripleo-undercloud/post.yml
@@ -12,6 +12,13 @@
           state: "{{ install.selinux|default('enforcing') }}"
       when: install.selinux is defined
 
+    - set_fact:
+        container_mgmt_cmd: docker
+      when: "install.version|openstack_release < 15"
+    - set_fact:
+        container_mgmt_cmd: podman
+      when: "install.version|openstack_release >= 15"
+
     - name: increase iscsi verify attempts in ironic conductor
       block:
         - name: set the iscsi verify attempt count in container
@@ -33,6 +40,6 @@
         - "install.version is defined"
   handlers:
     - name: restart ironic conductor container
-      command: docker restart ironic_conductor
+      command: "{{ container_mgmt_cmd }} restart ironic_conductor"
     - name: restart ironic conductor service
       command: systemctl restart openstack-ironic-conductor.service
